--- a/templates/index3.html
+++ b/templates/index3.html
@@ -54,9 +54,9 @@
 
         </div>
         <div class="row">
-            <div class="col"><b>Select stock</b></div>
+            <div class="col"><b>Stock</b></div>
             <div class="col">
-                <select id="stock" class="form-select" aria-label="Select" )>
+                <select id="stock" class="form-select" aria-label="Select">
                     <option selected value="MSFT">Microsoft</option>
                     <option value="META">Facebook</option>
                     <option value=AAPL>Apple</option>
@@ -66,7 +66,7 @@
             <div class="col"><b>Growth Rate</b></div>
 
             <div class="col">
-                <select id="growth_rate" class="form-select" aria-label="Select" )>
+                <select id="growth_rate" class="form-select" aria-label="Select">
                     <option selected value="0.1">10%</option>
                     <option value="0.02">2%</option>
                     <option value="0.04">4%</option>
@@ -80,10 +80,10 @@
                     <option value="1.0">100%</option>
                 </select>
             </div>
-            <div class="col"><b>Terminal_Growth</b></div>
+            <div class="col"><b>Terminal Growth</b></div>
 
             <div class="col">
-                <select id="terminal_growth_rate" class="form-select" aria-label="Select" )>
+                <select id="terminal_growth_rate" class="form-select" aria-label="Select">
                     <option selected value="0.1">10%</option>
                     <option value="0.02">2%</option>
                     <option value="0.04">4%</option>
@@ -100,7 +100,7 @@
             <div class="col"><b>Iterations</b></div>
 
             <div class="col">
-                <select id="iterations" class="form-select" aria-label="Select" )>
+                <select id="iterations" class="form-select" aria-label="Select">
                     <option selected value="10000">10000</option>
                     <option value="1000">1000</option>
                     <option value="5000">5000</option>
@@ -110,7 +110,7 @@
             <div class="col"><b>Risk Free Rate</b></div>
 
             <div class="col">
-                <select id="risk_free_rate" class="form-select" aria-label="Select" )>
+                <select id="risk_free_rate" class="form-select" aria-label="Select">
                     <option selected value="0.035">3.5%</option>
                     <option value="0.001">0.1%</option>
                     <option value="0.0025">0.25%</option>
@@ -128,7 +128,7 @@
             <div class="col"><b>Beta</b></div>
 
             <div class="col">
-                <select id="beta" class="form-select" aria-label="Select" )>
+                <select id="beta" class="form-select" aria-label="Select">
                     <option selected value="0.25">0.25</option>
                     <option value="0.50">0.50</option>
                     <option value="0.75">0.75</option>
@@ -143,7 +143,7 @@
             <div class="col"><b>Market Rate</b></div>
 
             <div class="col">
-                <select id="market_rate_return" class="form-select" aria-label="Select" )>
+                <select id="market_rate_return" class="form-select" aria-label="Select">
                     <option selected value="0.075">7.5%</option>
                     <option value="0.00">0%</option>
                     <option value="-0.002">-2%</option>
@@ -175,7 +175,7 @@
             <div class="w-100" style="padding:10px;text-align:right;font-size: small;"><i>Fair stock 
                 price modelled using a DCF model</i></div>
             
-            <div class="col-3"><p><b>Stock info</b></p>
+            <div class="col-3"><p><b>Stock Info</b></p>
                 <p>Symbol: <span id="symbol">N/A</span></p>
                 <p>Day High: <span id="dayHigh">N/A</span></p>
                 <p>Day Low: <span id="dayLow">N/A</span></p>  
