--- a/templates/hi.html
+++ b/templates/hi.html
@@ -13,7 +13,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
         function stock_value() {
-            var stock = document.getElementById('stock').value;
+            var symbol = document.getElementById('symbol').value;
             var growth_rate = document.getElementById('growth_rate').value;
             var terminal_growth = document.getElementById('terminal_growth').value;
             var iterations = document.getElementById('iterations').value;
@@ -24,7 +24,7 @@
             $.getJSON({
                 url: '/stocks',
                 type: 'POST',
-                data: {'symbol': stock, 'growth_rate': growth_rate, 'terminal_growth': terminal_growth, 'iterations': iterations, 'risk_free_rate': risk_free_rate, 'beta': beta, 'market_rate_return': market_rate_return},
+                data: {'symbol': symbol, 'growth_rate': growth_rate, 'terminal_growth': terminal_growth, 'iterations': iterations, 'risk_free_rate': risk_free_rate, 'beta': beta, 'market_rate_return': market_rate_return},
                 success: function (result) {
                     Plotly.newPlot('chart', result, {staticPlot: true});;
                 }
@@ -44,7 +44,7 @@
         <div class="row">
             <div class="col"><b>Stock</b></div>
             <div class="col">
-                <select id="stock" class="form-select" aria-label="Select">
+                <select id="symbol" class="form-select" aria-label="Select">
                     <option selected value="MSFT">Microsoft</option>
                     <option value="META">Facebook</option>
                     <option value="AAPL">Apple</option>
@@ -158,7 +158,7 @@
                 </select>
             </div>
             <div class="col">
-                <button class="btn btn-primary" onclick="stock_value(data)">Stock Valuation</button>
+                <button class="btn btn-primary" onclick="stock_value()">Stock Valuation</button>
             </div>
             <div class="col-9">
                 <h2 id="symbol"></h2>
