--- a/templates/hi.html
+++ b/templates/hi.html
@@ -12,7 +12,7 @@
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
-        function stock_value() {
+        function stock_value(symbol, growth_rate, terminal_growth, iterations, risk_free_rate, beta, market_rate_return) {
             var symbol = document.getElementById('symbol').value;
             var growth_rate = document.getElementById('growth_rate').value;
             var terminal_growth = document.getElementById('terminal_growth').value;
@@ -158,7 +158,7 @@
                 </select>
             </div>
             <div class="col">
-                <button class="btn btn-primary" onclick="stock_value()">Stock Valuation</button>
+                <button class="btn btn-primary" onclick="stock_value(symbol, growth_rate, terminal_growth, iterations, risk_free_rate, beta, market_rate_return)">Stock Valuation</button>
             </div>
             <div class="col-9">
                 <h2 id="symbol"></h2>
@@ -174,7 +174,6 @@
 
 <script>
     d = {{ graphJSON | safe }};
-    //d.config={staticPlot: true};
     Plotly.newPlot('chart', d, {});
     
 </script>
