--- a/templates/index.html
+++ b/templates/index.html
@@ -1,60 +1,141 @@
 <!doctype html>
-<html>
+<html lang="en">
 
 <head>
-    <link rel="icon"
-        href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAADElEQVQI12P4//8/AAX+Av7czFnnAAAAAElFTkSuQmCC">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+
+    <title></title>
+
     <script>
-        async function callback(endpoint, data) {
-            let response = await fetch("/callback/" + endpoint + "?data=" + data);
+        async function callback() {
+            let Stock = document.getElementById('stock').value;
+            let Period = document.getElementById('period').value;
+            let Interval = document.getElementById('interval').value;
+            //alert(Stock+Period+Interval);
+            //return;
+            let response = await fetch("/callback/getStock?data=" + Stock + "&period=" + Period + "&interval=" + Interval);
             if (response.ok) {
-                let json = await response.json();
-                if (endpoint == "getStock") {
-                    Plotly.newPlot('chart', json, {});
-                    //response = await fetch("/callback/getInfo?data=" + data);
-                    //json = await response.json();
-                    //info(json);
+                let chartJson = await response.json();
+                if (response.ok) {
+                    //response = await fetch("/callback/getInfo?data=" + Stock);
+                    //let infoJson = await response.json();
+                    //info(infoJson);
+                    Plotly.newPlot('chart', chartJson, {});
+                } else {
+                    alert("HTTP-Error: " + response.status + "on getInfo");
                 }
             } else {
-                alert("HTTP-Error: " + response.status);
+                alert("HTTP-Error: " + response.status + "on getStock");
             }
         }
         function info(json) {
-            //let name = document.getElementById('companyName');
-            //name.innerHTML = json.shortName;
-        }
-        function buildList(options, listId) {
-            var s = document.getElementById(listId);
-
-            for (var i = 0; i < options.length; i++) {
-                var opt = options[i];
-                var el = document.createElement("option");
-                el.text = opt;
-                el.value = opt;
-                s.add(el);
-            }
+            let name = document.getElementById('companyName');
+            name.innerHTML = json.shortName;
+            name = document.getElementById('symbol');
+            name.innerHTML = json.symbol;
+            name = document.getElementById('dayHigh');
+            name.innerHTML = json.dayHigh;
+            name = document.getElementById('dayLow');
+            name.innerHTML = json.dayLow;
         }
     </script>
 </head>
 
-<body style="font-family:arial, sans-serif">
-    <h1>Finance</h1>
-    <h3>Choose your stock code from the drop down list, below</h3>
-    <select id='stock' onchange="callback('getStock',this.value)">
-        <option value="MSFT">Microsoft</option>
-        <option value="FB">Facebook</option>
-        <option value="AAPL">Apple</option>
-        <option value="GOOGL">Google</option>
-    </select>
-    <h2 id="companyName"></h2>
-    <div id="chart" class="chart" style="border: 1px solid;padding:10px;  box-shadow: 5px 5px 4px #888888;"></div>
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col text-light bg-dark" style="margin:20px 0px 20px 0px">
+                <h1 style="padding:20px 0px 20px 0px">Stock movements demonstrator</h1>
+            </div>
+
+        </div>
+        <div class="row">
+            <div class="col"><b>Select stock</b></div>
+            <div class="col">
+                <select id="stock" class="form-select" aria-label="Select" )>
+                    <option selected value="MSFT">Microsoft</option>
+                    <option value="META">Facebook</option>
+                    <option value=AAPL>Apple</option>
+                    <option value="GOOGL">Google</option>
+                </select>
+            </div>
+            <div class="col"><b>for period</b></div>
+
+            <div class="col">
+                <select id="period" class="form-select" aria-label="Select" )>
+                    <option selected value="1d">1 day</option>
+                    <option value="5d">5 days</option>
+                    <option value="1mo">1 month</option>
+                    <option value="3mo">3 months</option>
+                    <option value="6mo">6 months</option>
+                    <option value="1y">1 year</option>
+                    <option value="2y">2 years</option>
+                    <option value="5y">5 years</option>
+                    <option value="10y">10 years</option>
+                    <option value="ytd">Year to date</option>
+                    <option value="max">Max</option>
+                </select>
+            </div>
+            <div class="col"><b>Interval</b></div>
+
+            <div class="col">
+                <select id="interval" class="form-select" aria-label="Select" )>
+                    <option selected value="1m">1 minute</option>
+                    <option value="2m">2 minutes</option>
+                    <option value="5m">5 minutes</option>
+                    <option value="15m">15 minutes</option>
+                    <option value="30m">30 minutes</option>
+                    <option value="60m">60 minutes</option>
+                    <option value="90m">90 minutes</option>
+                    <option value="1d">1 day</option>
+                    <option value="5d">5 days</option>
+                    <option value="1w">1 week</option>
+                    <option value="1m">1 month</option>
+                    <option value="3m">3 months</option>
+
+                </select>
+            </div>
+            <div class="col">
+                <button type="button" class="btn btn-primary" onclick="callback()">Fetch stock</button>
+            </div>
+            <div class="w-100" style="padding:10px;text-align:right;font-size: small;"><i>Note: not all intervals are
+                    valid for all periods</i></div>
+
+            <div class="col-3"><p><b>Stock info</b></p>
+                <p>yFinance is not currently reliably retrieving this data, so it has been disabled for now.</p>
+                <p>Symbol: <span id="symbol">N/A</span></p>
+                <p>Day High: <span id="dayHigh">N/A</span></p>
+                <p>Day Low: <span id="dayLow">N/A</span></p>
+
+                
+            </div>
+            <div class="col-9">
+                <h2 id="companyName"></h2>
+                <div id="chart" class="chart" style="height: 300px;border: 1px solid; 
+                    box-shadow: 5px 5px 5px #888888;">
+                </div>
+            </div>
+            <div class="col-12" style="font-size:smaller;padding:10px;text-align: right;">
+                <i>The data is, to the best of our knowledge, correct but cannot be guarenteed to be so</i>
+                <br/>
+                <i>This site is for educational and demonstation purposes, only</i>
+           </div>    
+           
+        </div>
+
+    </div>
+
+
+    <script>callback();</script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
 </body>
-<script>
-
-
-</script>
 
 </html>
