--- a/templates/hi.html
+++ b/templates/hi.html
@@ -12,7 +12,7 @@
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
-        function stock_value(symbol, growth_rate, terminal_growth, iterations, risk_free_rate, beta, market_rate_return) {
+        async function callback() {
             var symbol = document.getElementById('symbol').value;
             var growth_rate = document.getElementById('growth_rate').value;
             var terminal_growth = document.getElementById('terminal_growth').value;
@@ -21,13 +21,30 @@
             var beta = document.getElementById('beta').value;
             var market_rate_return = document.getElementById('market_rate_return').value;
 
-            $.getJSON({
-                url: '/stocks',
-                data: {'symbol': symbol, 'growth_rate': growth_rate, 'terminal_growth': terminal_growth, 'iterations': iterations, 'risk_free_rate': risk_free_rate, 'beta': beta, 'market_rate_return': market_rate_return},
-                success: function (result) {
-                    Plotly.newPlot('chart', result, {staticPlot: true});;
+            let response = fetch("/stocks/getStock?stock=" + stock + "&growth_rate=" + growth_rate + "&terminal_growth=" + terminal_growth + "&iterations=" + iterations + "&risk_free_rate=" + risk_free_rate + "&beta=" + beta + "&market_rate_return=" + market_rate_return);
+            if (response.ok) {
+                let chartJson = await response.json();
+                if (response.ok) {
+
+                    Plotly.newPlot('chart', chartJson, {});
+                } else {
+                    alert("HTTP-Error: " + response.status + "on getInfo");
                 }
-            });
+            } else {
+                alert("HTTP-Error: " + response.status + "on getStock");
+            }
+        }
+        function info(json) {
+            let name = document.getElementById('companyName');
+            name.innerHTML = json.shortName;
+            name = document.getElementById('symbol');
+            name.innerHTML = json.symbol;
+            name = document.getElementById('dayHigh');
+            name.innerHTML = json.dayHigh;
+            name = document.getElementById('dayLow');
+            name.innerHTML = json.dayLow;
+        }
+
     </script>
 </head>
 
@@ -155,25 +172,44 @@
                     <option value="0.030">30%</option>
 
                 </select>
+                
             </div>
             <div class="col">
-                <button class="btn btn-primary" click="stock_value(symbol, growth_rate, terminal_growth, iterations, risk_free_rate, beta, market_rate_return)">Stock Valuation</button>
+                <button type="button" class="btn btn-primary" onclick="callback()">Fetch stock</button>
+            </div>
+            <div class="w-100" style="padding:10px;text-align:right;font-size: small;"><i>Note: not all intervals are
+                    valid for all periods</i></div>
+
+            <div class="col-3"><p><b>Stock info</b></p>
+                <p>yFinance is not currently reliably retrieving this data, so it has been disabled for now.</p>
+                <p>Symbol: <span id="symbol">N/A</span></p>
+                <p>Day High: <span id="dayHigh">N/A</span></p>
+                <p>Day Low: <span id="dayLow">N/A</span></p>
+
+                
             </div>
             <div class="col-9">
-                <h2 id="symbol"></h2>
+                <h2 id="companyName"></h2>
                 <div id="chart" class="chart" style="height: 300px;border: 1px solid; 
                     box-shadow: 5px 5px 5px #888888;">
                 </div>
             </div>
+            <div class="col-12" style="font-size:smaller;padding:10px;text-align: right;">
+                <i>The data is, to the best of our knowledge, correct but cannot be guarenteed to be so</i>
+                <br/>
+                <i>This site is for educational and demonstation purposes, only</i>
+           </div>    
+           
         </div>
-    
+
     </div>
+
+    <script>callback();</script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
 </body>
 
-<script>
-    d = {{ graphJSON | safe }};
-    Plotly.newPlot('chart', d, {});
-
-</script>
 </html>
