--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,17 @@
             } else {
                 alert("HTTP-Error: " + response.status + "on getStock");
             }
+            
+            function info(json) {
+                let name = document.getElementById('companyName');
+                name.innerHTML = json.shortName;
+                name = document.getElementById('symbol');
+                name.innerHTML = json.symbol;
+                name = document.getElementById('dayHigh');
+                name.innerHTML = json.dayHigh;
+                name = document.getElementById('dayLow');
+                name.innerHTML = json.dayLow;
+            }
         }
     
     </script>
