--- a/templates/charts.html
+++ b/templates/charts.html
@@ -6,8 +6,8 @@
     <script>
         function cb(selection) {
             $.getJSON({
-                url: "/callback", data: { 'data': selection }, success: function (result) {
-                    Plotly.newPlot('chart', result, {staticPlot: true});;
+                url: "/stocks", data: { 'data': selection }, success: function (result) {
+                    Plotly.react('chart', result, {});;
                 }
             });
         }
@@ -20,12 +20,10 @@
     <p>Make sure you spell it correctly with capital letter(s), e.g. United Kingdom</p>
     <input type="text" id="fname" name="fname" onchange="cb(this.value)">
     <div id="chart" class="chart"></div>
+    <div id="png_chart"></div>
 </body>
 
 <script>
-    d = {{ graphJSON | safe }};
-    //d.config={staticPlot: true};
-    Plotly.newPlot('chart', d, {});
-    
+    cb("United Kingdom");
 </script>
 </html>
