--- a/templates/charts.html
+++ b/templates/charts.html
@@ -6,7 +6,9 @@
     <script>
         function cb(selection) {
             $.getJSON({
-                url: "/stocks", data: { 'data': selection }, success: function (result) {
+                url: "/stocks",
+                data: {'symbol': symbol, 'growth_rate': growth_rate, 'terminal_growth': terminal_growth, 'iterations': iterations, 'risk_free_rate': risk_free_rate, 'beta': beta, 'market_rate_return': market_rate_return},
+                success: function (result) {
                     Plotly.react('chart', result, {});;
                 }
             });
@@ -17,7 +19,6 @@
 <body style="font-family:arial, sans-serif">
     <h1>GDP per Capita Over Time</h1>
     <h2>Choose your country</h2>
-    <p>Make sure you spell it correctly with capital letter(s), e.g. United Kingdom</p>
     <input type="text" id="fname" name="fname" onchange="cb(this.value)">
     <div id="chart" class="chart"></div>
     <div id="png_chart"></div>
