--- a/templates/charts.html
+++ b/templates/charts.html
@@ -1,6 +1,14 @@
 <!doctype html>
-<html>
+<html lang="en">
+
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+
+    <title></title>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
@@ -15,13 +23,34 @@
         }
     </script>
 </head>
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col text-light bg-dark" style="margin:20px 0px 20px 0px">
+                <h1 style="padding:20px 0px 20px 0px">Statistical Stock Valuation Model</h1>
+            </div>
+        </div>
+            <div>
+            <div class="col"><b>Stock:</b></div>
+            <div class="col">
+                <input type="text" id="fname" name="fname">
+            </div>
+            <div class="col">
+                <button type="button" class="btn btn-primary" onclick="cb(this.value)">Fetch Model</button>
+            </div>
+            </div>
+            <div class="col-8">
+                <h2 id="Histogram"></h2>
+                <div id="chart" class="chart" style="height: 300px;border: 1px solid; 
+                    box-shadow: 5px 5px 5px #888888;">
+                </div>
 
-<body style="font-family:arial, sans-serif">
-    <h1>Statistical Stock Valuation Model</h1>
-    <h2>Input Ticker</h2>
-    <input type="text" id="fname" name="fname" onchange="cb(this.value)">
-    <div id="chart" class="chart"></div>
-    <div id="png_chart"></div>
+           </div>    
+           
+        </div>
+
+    </div>
+
 </body>
 
 <script>
