--- a/templates/try.html
+++ b/templates/try.html
@@ -92,3 +92,11 @@
 </script>
 
 </html>
+
+
+
+<body style="font-family:arial, sans-serif">
+    <h2>Input Ticker</h2>
+    <input type="text" id="fname" name="fname" onchange="cb(this.value)">
+    <div id="chart" class="chart"></div>
+    <div id="png_chart"></div>
