--- a/templates/try.html
+++ b/templates/try.html
@@ -16,7 +16,7 @@
             $.getJSON({
                 url: '/stocks'
                 type: 'POST'
-                data: {'symbol': symbol, 'growth_rate': growth_rate, 'terminal_growth': terminal_growth, 'iterations': iterations, 'risk_free_rate': risk_free_rate, 'beta': beta, 'market_rate_return': market_rate_return},
+                data: {'data': symbol, 'growth': growth_rate, 'terminal': terminal_growth, 'iter': iterations, 'risk_free': risk_free_rate, 'beta_': beta, 'market_rate': market_rate_return},
                 success: function(response) {
                     Plotly.react('chart', response, {});;
                 }
@@ -92,11 +92,3 @@
 </script>
 
 </html>
-
-
-
-<body style="font-family:arial, sans-serif">
-    <h2>Input Ticker</h2>
-    <input type="text" id="fname" name="fname" onchange="cb(this.value)">
-    <div id="chart" class="chart"></div>
-    <div id="png_chart"></div>
