--- a/templates/charts.html
+++ b/templates/charts.html
@@ -30,11 +30,13 @@
                 <h1 style="padding:20px 0px 20px 0px">Statistical Stock Valuation Model</h1>
             </div>
 
-        </div>
+            </div>
             <div>
             <div class="col"><b>Stock:</b></div>
             <div class="col">
-                <input type="text" id="fname" name="fname" onchange="cb(this.value)">
+                <input type="text" id="fname" name="fname">
+            <div class="col">
+                <button type="button" class="btn btn-primary" onclick="cb(this.value)">Fetch stock</button>
             </div>
     
             <div class="col-8">
